- Reload optionally dependent plugins when a plugin is unloaded.
  (#3614456 - Dale Anson)

- Fix #3614883: Alt+'f' multiply bound in "Search and Replace" dialog

- Applied patch #3615045 (Makarius), plus some additional cleanup of setting the 
  look and feel (Dale Anson)

- Fixed a bug in pluginmanager: transitive deps not installed when filtering
  (#3614985 - Eric Le Lay)
}}}
{{{ API Changes

- GUIUtilities.getShortcutLabel() has a second boolean argument to specify
  whether platform modifier symbols are desired or not. (#3615046 Makarius) 

- jEdit now depends on Java 1.7

- Removed deprecated (ambiguous) overloads of IOUtilities.closeQuietly().

- New status "REMOVED" added to PluginUpdate message.

}}}
{{{ UI improvements

- The bufferSwitcher now supports Drag&Drop (patch #3615177 - Yihua Zhang)

- Added "loading" icon for task status bar widget (request #3615068 -
  Matthieu Casanova)

- The TextArea will not scroll anymore when dragging files on jEdit
  (Matthieu Casanova)

- EnhancedDialog instances (Search/Replace, Options, Open) now can be closed
  using a single-key close-buffer.shortcut. (#3613007, #3588892 - László Schmidt,
  Zsombor Franczia, Bence Pintér)

- Plugin dependencies are shown in the plugin manager details pane for all three
  tabs. (#3614465 - Dale Anson)

- Increased the scrolling speed in option pane (Matthieu Casanova)

- In plugin manager's install panel plugin dependencies are unchecked
  if they are not required (Eric Le Lay)
}}}
{{{ Editing

- Patch to toggle word completion of words with digits.
  (#3614607, Patrick Eibl)

}}}
{{{ Miscellaneous

- MiscUtilities.expandVariables() converts from Windows to Linux-style paths
  when necessary (the reverse was already true). (Alan Ezust)

- New macros: Go To Offset, Reverse Selection (#3614563, #3614564 Thomas Meyer)

- Removed some no longer needed pre-Java7 MacOSX key handling workaround code 
    (#3615043, #3615044 Makarius, Alan Ezust) 

}}}

}}}

jEdit buffer local properties: